--- a/hw07/index.html
+++ b/hw07/index.html
@@ -178,14 +178,16 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      該次作業程式碼，請放在 https://github.com/<span style="color:red;">你的帳號</span>/vis2023f/hw<span style="color:red;">07</span>/src/ 檔案夾。
+      src 資料夾 <input type="button" name="back" onclick="location.href='https://github.com/Kiri487/vis2023f/tree/main/hw07/src'" value="開啟 hw7 src"> 
     </div>
   </div>
 
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
-      心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。心得報告 105 字。
+      起初在聽到這個作業的介紹時，覺得難度也一下子提高太多，但實際做了之後才發現助教把一切都打理好了，我只要捏個角色丟進去就好，感覺自己好像躺分仔......<br>
+      在 Medium baseline 中，要求顯示 8 位組員的移動路徑，但我們這組只有 7 個人，還有一個人似乎沒有繳交自己的移動檔案，因此實作時只放入了 6 位組員（包含我）的資料。<br>
+      另外由於 Unity Package 檔案大於 25MB 無法上傳，src 資料夾中放的是雲端連結。 
     </div>
   </div>
 
@@ -201,19 +203,34 @@
         </tr>
         <tr>
           <td rowspan="7" id="myTotal"></td>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox1"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox1" checked></td>
           <td id='m1'>2</td>
-          <td>Simple baseline - 描述、描述、描述</td>
+          <td>Simple baseline - 將 Unitypackage 放入 Unity 中</td>
         </tr>
         <tr>
           <td><input type="checkbox" class="flipswitch" id="myCheckbox2" checked></td>
-          <td id='m2'>6</td>
-          <td>Medium baseline - 描述、描述、描述 </td>
+          <td id='m2'>1/td>
+          <td>Simple baseline - 透過 Vroid 製作人物用來代表場景中的角色</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox3"></td>
-          <td id='m3'>2</td>
-          <td>Strong baseline - 描述、描述、描述 </td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox3" checked></td>
+          <td id='m3'>1</td>
+          <td>Medium baseline - 在 Unity 場景（師大美術館）上顯示出自己的移動路徑</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox4" checked></td>
+          <td id='m4'>2</td>
+          <td>Medium baseline - 將組員（8 人）的移動路徑在 Unity 場景（師大美術館）上顯示</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox5" checked></td>
+          <td id='m5'>2</td>
+          <td>Medium baseline - 每個人物模型上顯示出組員的學號</td>
+        </tr>
+        <tr>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox6"></td>
+          <td id='m6'>2</td>
+          <td>Strong baseline - 熱力圖、泡泡圖、有向圖</td>
         </tr>
       </table>
     </div>
@@ -222,8 +239,15 @@
   <!-- ------------------------------------------------>
   <div class="row hw12">
     <div class="col-md-12 twenty">
+      <h4>Simple & Medium baseline</h4>
+    </div>
+  </div>
+
+  <!-- ------------------------------------------------>
+  <div class="row hw12">
+    <div class="col-md-12 twenty">
       <video id="video1" style="width:100%;max-width:100%;" controls="">
-        <source src="https://www.w3schools.com/html/mov_bbb.mp4" type="video/mp4">
+        <source src="./src/Demo_simple_medium.mp4" type="video/mp4">
       </video>
     </div>
   </div>
@@ -247,7 +271,6 @@
   d3.select("#myCheckbox4").on("change",update);
   d3.select("#myCheckbox5").on("change",update);
   d3.select("#myCheckbox6").on("change",update);
-  d3.select("#myCheckbox7").on("change",update);
 
   update();
   
@@ -265,6 +288,18 @@
 
     if (d3.select("#myCheckbox3").property("checked")){
       score += parseInt(d3.select('#m3').html());   
+    }
+
+    if (d3.select("#myCheckbox4").property("checked")){
+      score += parseInt(d3.select('#m4').html());   
+    }
+
+    if (d3.select("#myCheckbox5").property("checked")){
+      score += parseInt(d3.select('#m5').html());   
+    }
+
+    if (d3.select("#myCheckbox6").property("checked")){
+      score += parseInt(d3.select('#m6').html());   
     }
 
     d3.select("#myTotal").html(score);    
