--- a/hw07/index.html
+++ b/hw07/index.html
@@ -186,8 +186,7 @@
   <div class="row hw12">
     <div class="col-md-12 twenty">
       起初在聽到這個作業的介紹時，覺得難度也一下子提高太多，但實際做了之後才發現助教把一切都打理好了，我只要捏個角色丟進去就好，感覺自己好像躺分仔......<br>
-      在 Medium baseline 中，要求顯示 8 位組員的移動路徑，但我們這組只有 7 個人，還有一個人似乎沒有繳交自己的移動檔案，因此實作時只放入了 6 位組員（包含我）的資料。<br>
-      另外由於 Unity Package 檔案大於 25MB 無法上傳，src 資料夾中放的是雲端連結。 
+      作業要求顯示 8 位組員的移動路徑，但我們這組只有 7 個人，還有一個人似乎沒有繳交自己的移動檔案，因此實作時只放入了 6 位組員（包含我）的資料。<br>
     </div>
   </div>
 
@@ -228,7 +227,7 @@
           <td>Medium baseline - 每個人物模型上顯示出組員的學號</td>
         </tr>
         <tr>
-          <td><input type="checkbox" class="flipswitch" id="myCheckbox6"></td>
+          <td><input type="checkbox" class="flipswitch" id="myCheckbox6" checked></td>
           <td id='m6'>2</td>
           <td>Strong baseline - 熱力圖、泡泡圖、有向圖</td>
         </tr>
@@ -252,9 +251,24 @@
     </div>
   </div>
 
-  <!-- ------------------------------------------------>
 
-  <!-- ------------------------------------------------>
+<!-- ------------------------------------------------>
+<div class="row hw12">
+  <div class="col-md-12 twenty">
+    <h4>Strong baseline</h4>
+  </div>
+</div>
+
+<!-- ------------------------------------------------>
+<div class="row hw12">
+  <div class="col-md-12 twenty">
+    <video id="video1" style="width:100%;max-width:100%;" controls="">
+      <source src="./src/Demo_strong.mp4" type="video/mp4">
+    </video>
+  </div>
+</div>
+
+<!-- ------------------------------------------------>
 
 
 <script>
